--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ django-ninja = "0.16.1"
 black = "21.12b0"
 django-stubs = "1.9.0"
 mypy = "0.931"
+isort = "^5.10.1"
 
 [tool.poetry.dev-dependencies]
 
@@ -38,3 +39,7 @@ ignore_errors = true
 
 [tool.django-stubs]
 django_settings_module = "sparta.settings"
+
+#블랙과 isort를 같이 쓸수잇게 세팅하는 내용
+[too.isort]
+profile = "black"
