--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,11 +9,11 @@ jobs:
     steps:
 #      - code check out
       - name: Check out the codes
-        uses: actions/checkout@v2
+        uses: actions/checkout@master
 #     python 설치
       - name: Setup python environment
         id: setup-python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@master
         with:
           python-version: 3.10.0
 #     poetry 설치
