--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,30 +1,30 @@
-name: my-front
+name: Django CI
+
 on:
   push:
-    branches:
-      - main
+
 jobs:
-  build:
+  ci:
     runs-on: ubuntu-latest
-    env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_REGION: 'ap-northeast-2'
-
     steps:
-      - name: Checkout source code.
-        uses: actions/checkout@master
+      - name: Check out the codes
+        uses: actions/checkout@v2
 
-      - name: Upload binary to S3 bucket
-        uses: jakejarvis/s3-sync-action@master
+      - name: Setup python environment
+        id: setup-python
+        uses: actions/setup-python@v2
         with:
-          args: --acl public-read --exclude '*' --include 'index.html'
-        env:
-          AWS_S3_BUCKET: ${{ secrets.BUCKET_NAME }}
+          python-version: 3.9.9
 
-      - name: Invalidate cache CloudFront
-        uses: chetan/invalidate-cloudfront-action@master
-        env:
-          DISTRIBUTION: ${{ secrets.DISTRIBUTION_ID }}
-          PATHS: '/index.html'
-        continue-on-error: true
+      - name: Install Poetry
+        run: |
+          curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python
+          echo "${HOME}/.poetry/bin" >> $GITHUB_PATH
+
+      - name: Install dependencies
+        run: |
+          ${HOME}/.poetry/bin/poetry install
+
+      - name: Test python project
+        run: |
+          poetry run python manage.py test
