--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ black = "21.12b0"
 django-stubs = "1.9.0"
 mypy = "0.931"
 isort = "^5.10.1"
+cx-Oracle = "^8.3.0"
+PyMySQL = "1.0.2"
+types-PyMySQL = "1.0.6"
 
 [tool.poetry.dev-dependencies]
 
