--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,10 @@ jobs:
         id: setup-python
         uses: actions/setup-python@v2
         with:
-          python-version: 3.9.9
+          python-version: 3.10.0
+
+      - name: Setup tmate session
+          uses: mxschmitt/action-tmate@v3
 
       - name: Install Poetry
         run: |
